--- a/index.html
+++ b/index.html
@@ -6,20 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
     <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
-
     <div class="loading">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div style="animation-delay: 100ms;" class="square"></div>
+        <div style="animation-delay: 300ms;" class="square"></div>
+        <div style="animation-delay: 400ms;" class="square"></div>
+        <div style="animation-delay: 500ms;" class="square"></div>
     </div>
-
-
-    <script src="./app.js"></script>
 </body>
 
 </html>
